# context_indexed_response_geometry

./: .gitignore  README.md  REPRODUCIBILITY.md  environment.txt  pyproject.toml  requirements-lock.txt  requirements.txt
configs/: basepoint_main.json  task1_cache.json
data/: README.md
experiments/: __init__.py
experiments/prefix_response_subspaces/: ASSUMPTIONS.md  IMPLEMENTATION_PLAN.md  PAPER_ASSUMPTIONS.md  PAPER_README.md  README.md  __init__.py  analyze_candidate_distribution_transfer.py  analyze_context_controls.py  analyze_control_rank_sensitivity.py  analyze_ev_matched_functional.py  analyze_first_layer_mechanism.py  analyze_functional_recovery.py  analyze_geometry.py  analyze_jacobian_alignment.py  analyze_optimal_value_control.py  analyze_optimal_value_functional.py  analyze_paper_functional.py  analyze_paper_geometry.py  analyze_rank_saturation.py  analyze_response_law_state.py  (+33 more)
prefix_displacement/: __init__.py  branching.py  cache_io.py  config.py  controls.py  dataset.py  extraction.py  interventions.py  metrics.py  model_loading.py  prefix_equivalence.py  projectors.py  reporting.py  runtime.py  schema.py  split_registry.py  trajectory_generation.py
scripts/: __init__.py  capture_environment.py  prepare_gsm8k_trajectories.py  prepare_reasoning_trajectories.py  run_two_gpu_suite.sh  validate_release.py
tests/: __init__.py  test_cache_io.py  test_config.py  test_controls.py  test_extraction.py  test_interventions.py  test_model_loading.py  test_prefix_equivalence.py  test_runtime.py  test_split_registry.py  test_trajectory_generation.py
(+66 files in other folders)
