[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-indexed-response-geometry"
version = "0.1.0"
description = "Reproducibility code for context-indexed next-token response geometry"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "torch>=2.2",
  "transformers>=5.5,<6",
  "datasets>=2.18",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["experiments*", "prefix_displacement*", "scripts*"]
